@@ -1,3 +1,9 @@
+2010-03-26  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/evil_string.c:
+	* src/lib/evil_string.h:
+	add strcasecmp wrapper for vc++
+
 2010-03-12  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/Makefile.am:
